# wasip2-poc

./: .gitignore  build.sh  flake.nix  world.wit
components/add_rs/: Cargo.toml  README.md  build.sh
components/add_rs/.cargo/: config.toml
components/add_rs/src/: lib.rs
components/mul_c/: build.sh  mul.c
components/sub_py/: app.py  build.sh  requirements.txt
components/xor_cs/: Component.cs  build.sh  xor_cs.csproj
host/: Cargo.toml  README.md
host/src/: main.rs
