[package]
name = "host"
version = "0.1.0"
edition = "2024"
authors = ["Nico"]

[dependencies]
wasmtime = "33.0.0"
wasmtime-wasi = "33.0.0"
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
